--- a/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -50,6 +50,10 @@
   <string name="ambient_display_screen_title_sp">Always-on zaslon</string>
   <string name="ambient_display_screen_title_summary">Postavite unutarnji stil zaslona. Vanjski zaslon će zadržati svoj stil zaključanog zaslona.</string>
   <string name="animation_clock_panel">Valno biranje</string>
+  <string name="animation_clock_panel1">Plavi i ružičasti spiralni sat</string>
+  <string name="animation_clock_panel2">Svijetloplavi spiralni sat</string>
+  <string name="animation_clock_panel3">Narančasti spiralni sat</string>
+  <string name="animation_clock_panel4">Plavi i ljubičasti spiralni sat</string>
   <string name="aod_app_name">Always-on zaslon i uređivač Zaklj. zaslona</string>
   <string name="aod_close_color_inversion">"Ova se značajka ne može kombinirati s inverzijom boja. Najprije isključite inverziju boja."</string>
   <string name="aod_component">Prikazane stavke</string>
@@ -221,7 +225,8 @@ dd.MM."</string>
   <string name="health_chart_step_count_unit">Koraci</string>
   <string name="health_no_data">Nema podataka o zdravlju</string>
   <string name="health_sleep_desc">Trajanje sna %1$s, kvaliteta sna: %2$s</string>
-  <string name="humidity_format">Vlažnost %s</string>
+  <string name="horizontal_clock">Vodoravni sat</string>
+  <string name="humidity_format">Vlaga %s</string>
   <string name="humidity_format_with_unit">%s</string>
   <string name="icon_content_description">Ikona dijaloga</string>
   <string name="item_view_role_description">Kartica</string>
@@ -460,14 +465,41 @@ dd.MM."</string>
   <string name="kg_template_description_magazine">Pretvorite svoj zaključani zaslon u naslovnicu časopisa.</string>
   <string name="kg_template_description_rhombus">Vrijeme je važno. Neka se broji.</string>
   <string name="kg_template_preview_content_description">Pregled zaključanog zaslona</string>
+  <string name="kg_template_title_Ultra_longtime_a_talkback">Veliki sat A</string>
+  <string name="kg_template_title_Ultra_longtime_b_talkback">Veliki sat B</string>
   <string name="kg_template_title_classic">Klasično</string>
+  <string name="kg_template_title_classic_max_talkback">Klasični zaključani zaslon MAX</string>
   <string name="kg_template_title_classic_phone">Prizor</string>
   <string name="kg_template_title_magazine_phone">Ljudi</string>
   <string name="kg_template_title_eastern_art">Istočnjačka estetika</string>
+  <string name="kg_template_title_eastern_a_three_talkback">Istočnjačka estetika A, tri reda</string>
+  <string name="kg_template_title_eastern_a_two_talkback">Istočnjačka estetika A, dva reda</string>
+  <string name="kg_template_title_eastern_art_b_horizontal_talkback">Istočnjačka estetika B, vodoravno</string>
+  <string name="kg_template_title_eastern_art_b_vertical_talkback">Istočnjačka estetika B, okomito</string>
+  <string name="kg_template_title_eastern_art_c_handwriting_talkback">Istočnjačka estetika C, rukom pisano</string>
+  <string name="kg_template_title_eastern_art_c_verdana_talkback">Istočnjačka estetika C, font Song</string>
   <string name="kg_template_title_magazine">Časopis</string>
+  <string name="kg_template_title_magazine_a_talkback">Časopis A</string> 
+  <string name="kg_template_title_magazine_b_talkback">Časopis B</string>
+  <string name="kg_template_title_magazine_c_one_talkback">Časopis C, s konturama</string> 
+  <string name="kg_template_title_magazine_c_three_talkback">Časopis C, s tri linije</string>
   <string name="kg_template_title_mine">Zaključani zaslon</string>
   <string name="kg_template_title_pets">Životinje</string>
+  <string name="kg_template_title_pets_bichondog_talkback">Bišon Frise</string>
+  <string name="kg_template_title_pets_blackfacesheep_talkback">Ovca</string> 
+  <string name="kg_template_title_pets_capybara_talkback">Kapibara</string> 
+  <string name="kg_template_title_pets_germancat_talkback">Devon rex</string>
+  <string name="kg_template_title_pets_harpseal_talkback">Grenlandski tuljan</string>
+  <string name="kg_template_title_pets_otter_talkback">Vidra</string>
+  <string name="kg_template_title_pets_panther_talkback">Pantera</string> 
+  <string name="kg_template_title_pets_potcoveredbird_talkback">Ptica</string>
+  <string name="kg_template_title_pets_siamesekitten_talkback">Sijamska mačka</string>
+  <string name="kg_template_title_plus_horizontal_talkback">Klasični zaključani zaslon Plus, vodoravno</string>
+  <string name="kg_template_title_plus_vertical_talkback">Klasični zaključani zaslon Plus, okomito</string>
   <string name="kg_template_title_rhombus">Romb</string>
+  <string name="kg_template_title_tablet_exclusive_a_talkback">Za tablete A</string>
+  <string name="kg_template_title_tablet_exclusive_b_talkback">Za tablete B</string>
+  <string name="kg_template_title_tablet_exclusive_c_talkback">Za tablete C</string>
   <string name="kg_time_language_string">Brojke</string>
   <string name="kg_tip_cant_get_third_party_wallpaper">"Ne mogu pristupiti pozadini treće strane"</string>
   <string name="kg_title_content">Sadržaj</string>
@@ -695,6 +727,12 @@ mm"</string>
   <string name="notification_screen_on">Osvijetli zaslon</string>
   <string name="off">Isključeno</string>
   <string name="on">Uključeno</string>
+  <string name="oneline_clock_with_cactus">Kaktus sa satom</string>
+  <string name="oneline_clock_with_forest">Šuma sa satom</string>
+  <string name="oneline_clock_with_ghost">Fraktal sa satom</string>
+  <string name="oneline_clock_with_spaceman">Astronaut sa satom</string>
+  <string name="oneline_clock_with_spirit">Djetelina s četiri lista sa satom</string>
+  <string name="oneline_clock_with_succulent">Sukulent sa satom</string>
   <string name="only_show_bg_description">"Ne prikazuj vrijeme, datum i druge stavke"</string>
   <string name="only_show_bg_title">Prikaži samo pozadinu</string>
   <string name="open_aod_mode">Uključi</string>
@@ -791,12 +829,15 @@ dd.MM."</string>
   <string name="time_style">Stil</string>
   <string name="time_style_layout">Raspored</string>
   <string name="tiny_accessibility_kg_battery_level">Baterija</string>
+  <string name="tiny_bubble_date_format">d.M.</string>
+  <string name="tiny_bubble_date_week_content_description">MMM dd EEEE</string>
+  <string name="tiny_bubble_date_week_format">d.M. EEE</string>
+  <string name="tiny_bubble_week_format">EEE</string>
   <string name="tiny_camera_content_description">Kamera</string>
   <string name="tiny_classic_date_format">d.M. EEE</string>
   <string name="tiny_clock_time_format_12">hh:mm</string>
   <string name="tiny_clock_time_format_24">HH:mm</string>
   <string name="tiny_doodle_clock_date">dd MMMM</string>
-  <string name="tiny_doodle_clock_week_full">EEEE</string>
   <string name="tiny_pets_date_format">d.M.</string>
   <string name="tiny_pets_week_format">EE</string>
   <string name="tiny_splicing_date_content_description">d.M.</string>
@@ -812,6 +853,10 @@ dd.MM."</string>
   <string name="uvi_format_desc">Ultraljubičasti indeks: %1$s, %2$s</string>
   <string name="v7_preference_off">ISKLJUČENO</string>
   <string name="v7_preference_on">UKLJUČENO</string>
+  <string name="vertical_clock">Vertikalni sat</string>
+  <string name="vertical_clock_with_paint">Vertikalni sat s bojom</string>
+  <string name="vertical_clock_with_planet">Vertikalni sat s planetom</string>
+  <string name="vertical_clock_with_shadow">Vertikalni sat sa sjenom</string>
   <string name="weather_no_data">Nema vremenskih podataka</string>
   <string name="wednesday">Srijeda</string>
   <string name="wednesday_short">Sri</string>
