--- a/Croatian/main/PersonalAssistant.apk/res/values-hr/strings.xml
+++ b/Croatian/main/PersonalAssistant.apk/res/values-hr/strings.xml
@@ -232,6 +232,7 @@ Dodirnite dvaput za prikaz detalja."</string>
   <string name="pa_accessibility_picker_search_clear">Čisti tekst</string>
   <string name="pa_accessibility_picker_search_tips">Traka za pretraživanje widgeta. Dodirnite dvaput za pretraživanje.</string>
   <string name="pa_accessibility_picker_status_installed">Instalirano</string>
+  <string name="pa_accessibility_picker_stack_widget_talkback">Odaberite widget: %1$s</string>
   <string name="pa_accessibility_picker_status_uninstalled">Nije instaliran</string>
   <string name="pa_accessibility_picker_status_unkonw">Nepoznato</string>
   <string name="pa_accessibility_picker_status_upgraded">Čeka se ažuriranje</string>
@@ -814,6 +815,7 @@ Dodajte widgete za početak."</string>
   <string name="pa_setting_privacy_revoke_cta_negative">Suglasnost možete povući za deset sekundi</string>
   <string name="pa_setting_privacy_revoke_cta_positive">Povlačenje</string>
   <string name="pa_setting_privacy_revoke_cta_progress">Povlačenje (%ds)</string>
+  <string name="pa_setting_privacy_revoke_cta_progress_accessibility">Povlačenje (%d sek.)</string>
   <string name="pa_setting_privacy_revoke_cta_summary">Povlačenje suglasnosti na Pravila o privatnosti Zaklj. aplikacija</string>
   <string name="pa_setting_privacy_revoke_error_message">Došlo je do pogreške poslužitelja. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="pa_setting_privacy_revoke_error_title">"Ne mogu povući suglasnost"</string>
@@ -960,7 +962,9 @@ Dodajte widgete za početak."</string>
   <string name="pa_travel_ambulance">Hitna pomoć</string>
   <string name="pa_travel_bind_account_negative">Ne sada</string>
   <string name="pa_travel_bind_account_positive">Upari</string>
+  <string name="pa_travel_bind_account_positive_new">Dodaj putovanje</string>
   <string name="pa_travel_bind_account_tip">Uparite račune usluga trećih strana kako biste pravodobno dobivali ažuriranja o svojim vlakovima i letovima</string>
+  <string name="pa_travel_bind_account_tip_new">Primajte ažuriranja o vlakovima i letovima</string>
   <string name="pa_travel_delete_dialog_message">Ova radnja je trajna.</string>
   <string name="pa_travel_delete_dialog_negative">Odustani</string>
   <string name="pa_travel_delete_dialog_positive">Izbriši</string>
@@ -1062,6 +1066,11 @@ Dodajte widgete za početak."</string>
   <string name="pa_travel_notification_action_go_check_in">Prijava</string>
   <string name="pa_travel_notification_action_trip_stat">Statistika putovanja</string>
   <string name="pa_travel_notification_arrival_station_name">Dolazna stanica</string>
+  <string name="pa_travel_notification_auth_account">Dodaj račun</string>
+  <string name="pa_travel_notification_auth_all_info">Dodaj račun za više informacija</string>
+  <string name="pa_travel_notification_auth_checkin">Dodaj račun za prijavu</string>
+  <string name="pa_travel_notification_auth_checkin_train">Dodaj račun za provjeru izlaza i sjedala</string>
+  <string name="pa_travel_notification_auth_remind">Dodaj račun za pravovremena ažuriranja</string>
   <string name="pa_travel_notification_bag_carousel_name">Vrtuljak za prtljagu</string>
   <string name="pa_travel_notification_bag_carousel_simple_name">Vrtuljak</string>
   <string name="pa_travel_notification_boarding_gate_name">Izlaz</string>
@@ -1069,20 +1078,30 @@ Dodajte widgete za početak."</string>
   <string name="pa_travel_notification_next_station_name">Sljedeća stanica</string>
   <string name="pa_travel_notification_seat_number_name">Sjedalo</string>
   <string name="pa_travel_notification_status_airplane_arrived">Sletio</string>
+  <string name="pa_travel_notification_status_airplane_landing">Slijetanje</string>
+  <string name="pa_travel_notification_status_airplane_near_departure">Polazak uskoro</string>
+  <string name="pa_travel_notification_status_airplane_take_off">Polijetanje</string>
+  <string name="pa_travel_notification_status_boarded">Ukrcaj</string>
+  <string name="pa_travel_notification_status_check_opened">Prijava otvorena</string>
+  <string name="pa_travel_notification_status_checked_in">Prijavljeno</string>
+  <string name="pa_travel_notification_status_date">Polazak dd.mm.</string>
   <string name="pa_travel_notification_status_airplane_canceled">Otkazano</string>
   <string name="pa_travel_notification_status_airplane_delayed">Kasni</string>
-  <string name="pa_travel_notification_status_boarded">Ukrcan</string>
-  <string name="pa_travel_notification_status_checked_in">Prijavljen</string>
   <string name="pa_travel_notification_status_end_board">Završetak ukrcaja</string>
   <string name="pa_travel_notification_status_not_check_in">Nisam prijavljen</string>
   <string name="pa_travel_notification_status_push_board">Posljednji poziv</string>
   <string name="pa_travel_notification_status_security_checked">Završena sigurnost</string>
   <string name="pa_travel_notification_status_start_board">Ukrcaj</string>
-  <string name="pa_travel_notification_status_train_arrived">Stigao</string>
-  <string name="pa_travel_notification_status_train_checking_in">Ukrcaj</string>
+  <string name="pa_travel_notification_status_train_arrived">Dolazak</string>
   <string name="pa_travel_notification_status_train_stop_check_in">Ukrcaj je završio</string>
   <string name="pa_travel_notification_status_train_wait_check_in">Čekanje</string>
   <string name="pa_travel_notification_ticket_gate_name">Izlaz</string>
+  <string name="pa_travel_notification_status_train_arrived_plan">Očekivani dolazak</string>
+  <string name="pa_travel_notification_status_train_checkin_change">Izlaz promijenjen</string>
+  <string name="pa_travel_notification_status_train_checking_in">Ukrcaj</string>
+  <string name="pa_travel_notification_status_train_delayed">Kašnjenje</string>
+  <string name="pa_travel_notification_status_train_delayed_short">Kašnjenje</string>
+  <string name="pa_travel_notification_status_train_near_departure">Polazak uskoro</string>
   <string name="pa_travel_police">Policija</string>
   <string name="pa_travel_preference_cp_state_bind">Uparen</string>
   <string name="pa_travel_preference_cp_state_not_bind">Nije upareno</string>
