--- a/Croatian/main/Calendar.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Calendar.apk/res/values-hr/strings.xml
@@ -458,6 +458,7 @@
   <string name="guide_card_second_text">Uvezi seriju, rođendan prijatelja ne nedostaje</string>
   <string name="guide_card_title">Uvezi rođendane</string>
   <string name="guide_setting">Navedite sljedeće podatke za dobivanje točne statistike o menstruaciji</string>
+  <string name="have_schedule_today">Zakazani događaji</string>
   <string name="hide_menstruation_info">Sakrij informacije o menstruaciji</string>
   <string name="hint_attendees">Gosti</string>
   <string name="hint_description">Opis</string>
