--- a/Croatian/main/MiMediaEditor.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiMediaEditor.apk/res/values-hr/strings.xml
@@ -164,6 +164,8 @@ za podešavanje područja disperzije"</string>
   <string name="ai_action_toast_picture_size_out_of_limit">"Slike ove veličine nisu podržane. Pokušajte s drugom."</string>
   <string name="ai_action_toast_poor_network">"Nije moguće spojiti se na mrežu. Provjerite mrežne postavke i pokušajte ponovo."</string>
   <string name="ai_action_toast_request_time_out">Zahtjev je istekao. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
+  <string name="ai_emote_loading_expression_list">Generiranje izraza…</string>
+  <string name="ai_emote_loading_expression_replace">Zamjena izraza…</string>
   <string name="ai_emote_loading_title">Generiranje izraza…</string>
   <string name="ai_emote_notice_desc">"Koristite umjetnu inteligenciju da promijenite izraze ljudi na fotografijama.
 Za najbolje rezultate koristite ovu značajku na jasnim fotografijama okrenutim prema naprijed."</string>
@@ -1546,7 +1548,8 @@ Dodirnite Pro za korištenje."</string>
   <string name="photo_editor_talkback_undo">Poništi</string>
   <string name="photo_editor_text">Tekst</string>
   <string name="photo_editor_virtualization">AI slika</string>
-  <string name="photo_editor_watermark">Vodeni žig</string>
+  <string name="photo_editor_water_mark">Oznaka</string>
+  <string name="photo_editor_watermark">Oznaka</string>
   <string name="photo_font_cancel_download">Odustani</string>
   <string name="photo_font_download">Preuzmi</string>
   <string name="photo_font_download_failed_for_notwork">"Nije bilo moguće preuzeti. Povežite se s mrežom i pokušajte ponovno."</string>
@@ -2020,6 +2023,13 @@ Prenesite fotografije s jasnim crtama lica za najbolje rezultate."</string>
   <string name="virtualization_style_5">Prijatelji životinja</string>
   <string name="virtualization_style_6">Zvijezda sutrašnjice</string>
   <string name="virtualization_style_7">Nostalgija</string>
+  <string name="virtualization_style_v2_1">Divlje cvijeće</string>
+  <string name="virtualization_style_v2_2">Virtualni svijet</string>
+  <string name="virtualization_style_v2_3">Plavi sat</string>
+  <string name="virtualization_style_v2_4">Divljina</string>
+  <string name="virtualization_style_v2_5">Sunčeve zrake</string>
+  <string name="virtualization_style_v2_6">Rembrandtova rasvjeta</string>
+  <string name="virtualization_style_v2_7">Svjetlo na prozoru</string>
   <string name="vlog_auto_compose_middle_close">Ručno podešavanje kompozicije uklonit će prethodno primijenjene pametne efekte. Svejedno prilagoditi?</string>
   <string name="vlog_adjust_brightness">Svjetlina</string>
   <string name="vlog_adjust_contrast">Kontrast</string>
@@ -2273,6 +2283,10 @@ Prenesite fotografije s jasnim crtama lica za najbolje rezultate."</string>
   <string name="vlog_float_view_ratio">Omjer</string>
   <string name="vlog_fps">Brzina sličica u sekundi</string>
   <string name="vlog_improt_encode_video_error">Došlo je do pogreške kodiranja. Pokušajte ponovo.</string>
+  <string name="vlog_livephoto_covert_photo">Pretvori u fotografiju</string>
+  <string name="vlog_livephoto_covert_photo_toast_tips">Ako nastavite, neki će se efekti izgubiti. Želite li svejedno pretvoriti u fotografiju?</string>
+  <string name="vlog_livephoto_covert_video">Pretvori u videozapis</string>
+  <string name="vlog_livephoto_covert_video_toast_tips">Ako nastavite, neki će se efekti izgubiti. Želite li svejedno pretvoriti u videozapis?</string>
   <string name="vlog_load_data_fail">"Ne mogu učitati podatke"</string>
   <string name="vlog_mi_clip">Uređivač videozapisa</string>
   <string name="vlog_mi_clip_cn">Uređivač videozapisa</string>
@@ -2317,6 +2331,7 @@ Prenesite fotografije s jasnim crtama lica za najbolje rezultate."</string>
   <string name="vlog_save_stop_tips">Dodirnite ponovo da biste otkazali spremanje</string>
   <string name="vlog_saving">Izvoz videozapisa…</string>
   <string name="vlog_saving_no_edit">Ostanite na ovoj stranici dok se stavke spremaju…</string>
+  <string name="vlog_saving_no_exit">Spremanje videozapisa. Ostanite na ovoj stranici.</string>
   <string name="vlog_speed_double">2.0X</string>
   <string name="vlog_speed_half">0.5X</string>
   <string name="vlog_speed_normal">1.0X</string>
